--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
-language: python
+language: 
+  - python
 python:
   - "2.6"
   - "2.7"
 env:
   - DJANGO_VERSION=1.7
 install:
- - pip install Django>=1.7 --use-mirrors
-script: python test.py
+  - pip install Django>=1.7 --use-mirrors
+script: 
+  - python test.py
